--- a/src/Teams.Notifications.Api/Teams.Notifications.Api.csproj
+++ b/src/Teams.Notifications.Api/Teams.Notifications.Api.csproj
@@ -5,17 +5,11 @@
 	<LangVersion>preview</LangVersion>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
-	
-	<EnableConfigurationBindingGenerator>true</EnableConfigurationBindingGenerator>
-	<EnableRequestDelegateGenerator>true</EnableRequestDelegateGenerator>
-	<EmitCompilerGeneratedFiles>true</EmitCompilerGeneratedFiles>
 
 	<!--<PublishReadyToRun>true</PublishReadyToRun>-->
 	<RuntimeIdentifer>linux-x64</RuntimeIdentifer>
 	<InvariantGlobalization>true</InvariantGlobalization>
-	  
-	<EnableSdkContainerSupport>true</EnableSdkContainerSupport>
-	<EnableSdkContainerDebugging>true</EnableSdkContainerDebugging>
+
 	<ContainerRepository>teams-cards-api</ContainerRepository>
 	<ContainerBaseImage>mcr.microsoft.com/dotnet/aspnet:9.0.0-noble-chiseled-amd64</ContainerBaseImage>
 	  
@@ -25,20 +19,17 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="AdaptiveCards" Version="3.1.0" />
+    <PackageReference Include="AdaptiveCards" Version="*" />
     <PackageReference Include="Azure.Identity" Version="1.13.1" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="9.0.0" />
+    <PackageReference Include="Microsoft.Bot.Builder" Version="*" />
+    <PackageReference Include="Microsoft.Bot.Builder.Integration.AspNet.Core" Version="4.23.0" />
     <PackageReference Include="Microsoft.Graph.Beta" Version="5.*-*" />
     <PackageReference Include="Microsoft.Identity.Web" Version="3.5.0" />
 	<PackageReference Include="Microsoft.Azure.Cosmos" Version="3.*" />
     <PackageReference Include="Microsoft.IO.RecyclableMemoryStream" Version="3.0.1" />
-	<PackageReference Include="Refit.HttpClientFactory" Version="8.*" />
-	<PackageReference Include="NeoSmart.AsyncLock" Version="3.2.1" />
+    <PackageReference Include="Razorback" Version="1.0.1" />
 	<PackageReference Include="System.Linq.Async" Version="6.0.1" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\BotFramework\Teams.Cards.BotFramework.csproj" />
   </ItemGroup>
 
 
@@ -50,7 +41,6 @@
 	<Using Include="System.Text.RegularExpressions" />
 	<Using Include="System.Collections.Immutable" />
 	<Using Include="System.Collections.Concurrent" />
-	<Using Include="Teams.Cards.BotFramework" />
 	<Using Include="System.Text.Json" />
 </ItemGroup>
 
