--- a/src/Teams.Notifications.Api/appsettings.json
+++ b/src/Teams.Notifications.Api/appsettings.json
@@ -28,7 +28,8 @@
       "Assembly": "Microsoft.Agents.Authentication.Msal",
       "Type": "MsalAuth",
       "Settings": {
-        "AuthType": "ClientSecret", // this is the AuthType for the connection, valid values can be found in Microsoft.Agents.Authentication.Msal.Model.AuthTypes.  The default is ClientSecret.
+        "AuthType":
+          "ClientSecret", // this is the AuthType for the connection, valid values can be found in Microsoft.Agents.Authentication.Msal.Model.AuthTypes.  The default is ClientSecret.
         "AuthorityEndpoint": "https://login.microsoftonline.com/{{TenantId}}",
         "ClientId": "{{ClientId}}", // this is the Client ID used for the connection.
         "ClientSecret": "00000000-0000-0000-0000-000000000000", // this is the Client Secret used for the connection.
