all to alpha and update

--- a/src/Teams.Notifications.Api/Teams.Notifications.Api.csproj
+++ b/src/Teams.Notifications.Api/Teams.Notifications.Api.csproj
@@ -21,14 +21,17 @@
 	<ItemGroup>
 		<PackageReference Include="AdaptiveCards" Version="*" />
 		<PackageReference Include="Azure.Identity" Version="*" />
-		<PackageReference Include="Microsoft.Agents.Builder" Version="0.2.295-alpha" />
-		<PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="9.*" />
-		<PackageReference Include="Microsoft.Agents.Authentication.Msal" Version="*" />
-		<PackageReference Include="Microsoft.Agents.Hosting.AspNetCore" Version="0.2.295-alpha" />
+		<PackageReference Include="Microsoft.Agents.Authentication.Msal" Version="*-*"/>
+		<PackageReference Include="Microsoft.Agents.Builder" Version="*-*" />
+		<PackageReference Include="Microsoft.Agents.Extensions.Teams" Version="*-*" />	
+		<PackageReference Include="Microsoft.Agents.Builder.Dialogs" Version="*-*" />
+		<PackageReference Include="Microsoft.Agents.Hosting.AspNetCore" Version="*-*"/>
 		<PackageReference Include="Microsoft.SemanticKernel.Agents.AzureAI" Version="*-*" />
 		<PackageReference Include="Microsoft.SemanticKernel.Agents.Core" Version="*" />
 		<PackageReference Include="Microsoft.SemanticKernel.Connectors.AzureOpenAI" Version="*" />
 		<PackageReference Include="Microsoft.SemanticKernel.Connectors.OpenAI" Version="*" />
+		<PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="9.*" />
+		
 		<PackageReference Include="Microsoft.Graph.Beta" Version="5.*-*" />
 	</ItemGroup>
 
