add run settings and add base for dev

--- a/src/Teams.Notifications.Api.Tests/Teams.Notifications.Api.Tests.csproj
+++ b/src/Teams.Notifications.Api.Tests/Teams.Notifications.Api.Tests.csproj
@@ -15,4 +15,10 @@
 		<PackageReference Include="coverlet.collector" Version="*" />
 		<PackageReference Include="Microsoft.Azure.Kusto.Data" Version="*" />
 	</ItemGroup>
+	<ItemGroup>
+	  <ProjectReference Include="..\Teams.Notifications.Api\Teams.Notifications.Api.csproj" />
+	</ItemGroup>
+	<PropertyGroup>
+		<RunSettingsFilePath>$(MSBuildProjectDirectory)\runsettings\local.runsettings</RunSettingsFilePath>
+	</PropertyGroup>
 </Project>
