--- a/src/Teams.Notifications.Api/appsettings.json
+++ b/src/Teams.Notifications.Api/appsettings.json
@@ -11,18 +11,11 @@
     "RemoveRecipientMention": false,
     "NormalizeMentions": false
   },
-
-  "TokenValidation": {
-    "Audiences": [
-      "{{ClientId}}" // this is the Client ID used for the Azure Bot
-    ],
-    "TenantId": "{{TenantId}}"
-  },
-
+  "ClientId": "{{ClientId}}", // this is the Client ID used for the Azure Bot
+  "TenantId": "{{TenantId}}",
+  "ClientSecret": "{{ClientSecret}}",
   "Connections": {
     "ServiceConnection": {
-      "Assembly": "Microsoft.Agents.Authentication.Msal",
-      "Type": "MsalAuth",
       "Settings": {
         "AuthType": "ClientSecret", // this is the AuthType for the connection, valid values can be found in Microsoft.Agents.Authentication.Msal.Model.AuthTypes.  The default is ClientSecret.
         "AuthorityEndpoint": "https://login.microsoftonline.com/{{TenantId}}",
