--- a/src/Teams.Notifications.Api/appsettings.json
+++ b/src/Teams.Notifications.Api/appsettings.json
@@ -14,6 +14,13 @@
   "ClientId": "{{ClientId}}", // this is the Client ID used for the Azure Bot
   "TenantId": "{{TenantId}}",
   "ClientSecret": "{{ClientSecret}}",
+
+  "TokenValidation": {
+    "Audiences": [
+      "{{ClientId}}" // this is the Client ID used for the Azure Bot
+    ],
+    "TenantId": "{{TenantId}}"
+  },
   "Connections": {
     "ServiceConnection": {
       "Settings": {
