--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -1,7 +1,5 @@
 #See https://aka.ms/customizecontainer to learn how to customize your debug container and how Visual Studio uses this Dockerfile to build your images for faster debugging.
 
-FROM mcr.microsoft.com/dotnet/aspnet:9.0 AS base
-
 FROM mcr.microsoft.com/dotnet/sdk:9.0 AS build
 ARG BUILD_CONFIGURATION=Release
 COPY . /src/
@@ -13,7 +11,7 @@ ARG BUILD_CONFIGURATION=Release
 WORKDIR "/src/Teams.Notifications.Api"
 RUN dotnet publish -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
 
-FROM base AS final
+FROM mcr.microsoft.com/dotnet/aspnet:9.0 AS final
 COPY --from=publish /app/publish /app
 USER app
 EXPOSE 8080
