--- a/src/Teams.Notifications.Api.Tests/Teams.Notifications.Api.Tests.csproj
+++ b/src/Teams.Notifications.Api.Tests/Teams.Notifications.Api.Tests.csproj
@@ -9,8 +9,12 @@
 	</PropertyGroup>
 	<ItemGroup>
 		<PackageReference Include="Azure.Identity" Version="*" />
+		<PackageReference Include="GitHubActionsTestLogger" Version="*">
+		  <PrivateAssets>all</PrivateAssets>
+		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		</PackageReference>
 		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="*" />
-		<PackageReference Include="Moq" Version="4.20.72" />
+		<PackageReference Include="Moq" Version="*" />
 		<PackageReference Include="MSTest.TestAdapter" Version="*" />
 		<PackageReference Include="MSTest.TestFramework" Version="*" />
 		<PackageReference Include="coverlet.collector" Version="*">
