--- a/.github/workflows/shared-app-ci-workflow.yaml
+++ b/.github/workflows/shared-app-ci-workflow.yaml
@@ -27,7 +27,7 @@ jobs:
       - name: run unit tests
         working-directory: ./src/${{ env.APPLICATION_NAME }}.Tests
         run: |
-          dotnet test -v:q --nologo /p:CollectCoverage=true --filter TestCategory=Unit
+          dotnet test -v:q --nologo --filter TestCategory=Unit --logger GitHubActions
 
       - name: docker build test
         working-directory: ./src/
