--- a/.github/workflows/shared-app-integration-tests-workflow.yaml
+++ b/.github/workflows/shared-app-integration-tests-workflow.yaml
@@ -110,7 +110,7 @@ jobs:
         working-directory: ./src/${{ inputs.applicationFolder }}.Tests
         run: dotnet test -v:q --nologo -s ./runsettings/${{ inputs.environment }}.runsettings --filter TestCategory=${{ inputs.testCategory }} --logger GitHubActions
       - name: run integration tests
-        run: dotnet tool install dotnet-reportgenerator-globaltool
+        run: dotnet tool install --global dotnet-reportgenerator-globaltool
       - name: generate coverage report
         working-directory: ./
         run: reportgenerator -reports:"tests\*\coverage.cobertura.xml" -targetdir:"test-results" -reporttypes:Html
@@ -118,3 +118,4 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: test-results
+          path: test-results
