--- a/.github/workflows/shared-app-ci-workflow.yaml
+++ b/.github/workflows/shared-app-ci-workflow.yaml
@@ -32,7 +32,7 @@ jobs:
         run: dotnet tool install --global dotnet-reportgenerator-globaltool
       - name: generate coverage report
         working-directory: ./
-        run: reportgenerator -reports:"tests\*\coverage.cobertura.xml" -targetdir:"test-results" -reporttypes:Html
+        run: reportgenerator -reports:"./tests/*/coverage.cobertura.xml" -targetdir:"test-results" -reporttypes:Html
       - name: upload test results
         uses: actions/upload-artifact@v4
         with:
