--- a/.github/workflows/shared-app-integration-tests-workflow.yaml
+++ b/.github/workflows/shared-app-integration-tests-workflow.yaml
@@ -113,9 +113,9 @@ jobs:
         run: dotnet tool install --global dotnet-reportgenerator-globaltool
       - name: generate coverage report
         working-directory: ./
-        run: reportgenerator -reports:"./tests/*/coverage.cobertura.xml" -targetdir:"test-results" -reporttypes:Html
+        run: reportgenerator -reports:"./tests/*/coverage.cobertura.xml" -targetdir:"coverage-results" -reporttypes:Html
       - name: upload test results
         uses: actions/upload-artifact@v4
         with:
-          name: test-results
-          path: test-results
+          name: coverage-results
+          path: coverage-results
