--- a/.github/workflows/shared-app-ci-workflow.yaml
+++ b/.github/workflows/shared-app-ci-workflow.yaml
@@ -13,28 +13,29 @@ jobs:
     name: Build and unit test ${{ inputs.applicationName }}
     runs-on: ubuntu-latest
     steps:
-      - name: checkout repo
+      - name: Checkout repo
         uses: actions/checkout@v4
 
-      - uses: actions/setup-dotnet@v4
+      - name: Setup .NET
+        uses: actions/setup-dotnet@v4
         with:
           dotnet-version: 9.x
 
-      - name: expose app name into env
+      - name: Expose app name into env
         run: |
           echo "APPLICATION_NAME=${{ inputs.applicationName }}" >> $GITHUB_ENV
 
-      - name: run unit tests
+      - name: Run unit tests
         working-directory: ./src/${{ env.APPLICATION_NAME }}.Tests
         run: |
           dotnet test -v:q --nologo --filter TestCategory=Unit /p:CollectCoverage=true --logger GitHubActions
-      - name: ReportGenerator
+      - name: Generate coverage report
         uses: danielpalme/ReportGenerator-GitHub-Action@5.4.5
         with:
           reports: "./tests/*/coverage.cobertura.xml" # REQUIRED # The coverage reports that should be parsed (separated by semicolon). Globbing is supported.
           targetdir: "coverage-results" # REQUIRED # The directory where the generated report should be saved.
           reporttypes: "HtmlInline;MarkdownSummaryGithub"
-      - name: Upload test results
+      - name: Upload test results in case manual view
         uses: actions/upload-artifact@v4
         with:
           name: coverage-results
