--- a/src/Teams.Notifications.Api/appsettings.json
+++ b/src/Teams.Notifications.Api/appsettings.json
@@ -11,33 +11,8 @@
     "RemoveRecipientMention": false,
     "NormalizeMentions": false
   },
-  "ClientId": "{{ClientId}}", // this is the Client ID used for the Azure Bot
+  "ClientId": "{{ClientId}}",
   "TenantId": "{{TenantId}}",
-  "ClientSecret": "{{ClientSecret}}",
+  "ClientSecret": "{{ClientSecret}}"
 
-  "TokenValidation": {
-    "Audiences": [
-      "{{ClientId}}" // this is the Client ID used for the Azure Bot
-    ],
-    "TenantId": "{{TenantId}}"
-  },
-  "Connections": {
-    "ServiceConnection": {
-      "Settings": {
-        "AuthType": "ClientSecret", // this is the AuthType for the connection, valid values can be found in Microsoft.Agents.Authentication.Msal.Model.AuthTypes.  The default is ClientSecret.
-        "AuthorityEndpoint": "https://login.microsoftonline.com/{{TenantId}}",
-        "ClientId": "{{ClientId}}", // this is the Client ID used for the connection.
-        "ClientSecret": "{{ClientSecret}}", // this is the Client Secret used for the connection.
-        "Scopes": [
-          "https://api.botframework.com/.default"
-        ]
-      }
-    }
-  },
-  "ConnectionsMap": [
-    {
-      "ServiceUrl": "*",
-      "Connection": "ServiceConnection"
-    }
-  ]
 }
