--- a/src/Teams.Notifications.Api/Properties/launchSettings.json
+++ b/src/Teams.Notifications.Api/Properties/launchSettings.json
@@ -3,7 +3,7 @@
     "kestrel": {
       "commandName": "Project",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "dev"
+        "ASPNETCORE_ENVIRONMENT": "local"
       },
       "dotnetRunMessages": true,
       "applicationUrl": "http://localhost:3978",
