--- a/.github/workflows/shared-app-cd-workflow.yaml
+++ b/.github/workflows/shared-app-cd-workflow.yaml
@@ -81,7 +81,7 @@ jobs:
       environment: dev
 
   app_deployment_test:
-    needs: [app_package]
+    needs: [app_package, app_integration_tests_dev]
     uses: ./.github/workflows/shared-app-deployment-workflow.yaml
     secrets:
       AZURE_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
@@ -112,7 +112,7 @@ jobs:
       testCategory: "Smoke"
 
   app_deployment_prod:
-    needs: [app_package, app_integration_tests_test] #add app_config_deploy_prod to the array when doing the enable
+    needs: [app_package, app_integration_tests_test]
     uses: ./.github/workflows/shared-app-deployment-workflow.yaml
     secrets:
       AZURE_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
