--- a/charts/Teams.Notifications.Api/values.yaml
+++ b/charts/Teams.Notifications.Api/values.yaml
@@ -1,6 +1,7 @@
 # This folder contains no application-specific settings and can be reused as is.
 replicaCount: 1
-nameOverride: ""
+nameOverride: devops-teams-notification-api
+appPath: /devops-teams-notification-api
 port: 8080
 environment: dev
 env:
