readme update and add client secret to the local config

--- a/src/Teams.Notifications.Api/appsettings.local.json
+++ b/src/Teams.Notifications.Api/appsettings.local.json
@@ -5,7 +5,7 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  // in dev, test and prod will be produced by the service account
-  "AZURE_CLIENT_ID": "dee54050-c40c-48b6-86b0-b6e31ed9d2ca",
-  "AZURE_TENANT_ID": "8421dd92-337e-4405-8cfc-16118ffc5715"
+  "AZURE_CLIENT_ID": "c911e027-3cbc-4614-9f2e-872c20b8f4b2",
+  "AZURE_TENANT_ID": "8421dd92-337e-4405-8cfc-16118ffc5715",
+  "ClientSecret": "CHANGE_ME"
 }
