cleanup and fixes

--- a/src/Teams.Notifications.Api/appsettings.json
+++ b/src/Teams.Notifications.Api/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "AgentApplicationOptions": {
-    "StartTypingTimer": true,
+    "StartTypingTimer": false,
     "RemoveRecipientMention": false,
     "NormalizeMentions": false
   }
