--- a/charts/Teams.Notifications.Api/devops-teams-notification-api/Chart.yaml
+++ b/charts/Teams.Notifications.Api/devops-teams-notification-api/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-name: teams-notification-api
+name: devops-teams-notification-api
 description: Generic Helm chart for .NET applications, can be reused by copying the chart
 type: application
 version: 1.0.0
