--- a/charts/Teams.Notifications.Api/devops-teams-notification-api/templates/service.yaml
+++ b/charts/Teams.Notifications.Api/devops-teams-notification-api/templates/service.yaml
@@ -1,4 +1,4 @@
-{{- $name := include "teams-notification-api.name" . -}}
+{{- $name := include "devops-teams-notification-api.name" . -}}
 apiVersion: v1
 kind: Service
 metadata:
