and files themselves

--- a/charts/Teams.Notifications.Api/devops-teams-notification-api/templates/deployment.yaml
+++ b/charts/Teams.Notifications.Api/devops-teams-notification-api/templates/deployment.yaml
@@ -1,4 +1,4 @@
-{{- $name := include "teams-notification-api.name" . -}}
+{{- $name := include "devops-teams-notification-api.name" . -}}
 kind: Deployment
 apiVersion: apps/v1
 metadata:
