--- a/charts/Teams.Notifications.Api/devops-teams-notification-api/templates/ingress.yaml
+++ b/charts/Teams.Notifications.Api/devops-teams-notification-api/templates/ingress.yaml
@@ -1,4 +1,4 @@
-{{- $name := include "teams-notification-api.name" . -}}
+{{- $name := include "devops-teams-notification-api.name" . -}}
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
