--- a/src/Teams.Notifications.Api/Teams.Notifications.Api.csproj
+++ b/src/Teams.Notifications.Api/Teams.Notifications.Api.csproj
@@ -5,13 +5,14 @@
 		<LangVersion>preview</LangVersion>
 		<Nullable>enable</Nullable>
 		<NoWarn>$(NoWarn);SKEXP0010;1591</NoWarn>
-		<GenerateDocumentationFile>true</GenerateDocumentationFile>			
+		<GenerateDocumentationFile>true</GenerateDocumentationFile>
 	</PropertyGroup>
 
 	<ItemGroup>
 		<PackageReference Include="AdaptiveCards" Version="*" />
 		<PackageReference Include="Azure.Extensions.AspNetCore.Configuration.Secrets" Version="*" />
 		<PackageReference Include="Azure.Identity" Version="*" />
+		<PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="*" />
 		<PackageReference Include="Microsoft.Agents.Authentication.Msal" Version="*-*" />
 		<PackageReference Include="Microsoft.Agents.Builder" Version="*-*" />
 		<PackageReference Include="Microsoft.Agents.Extensions.Teams" Version="*-*" />
