--- a/src/Teams.Notifications.Api/Teams.Notifications.Api.csproj
+++ b/src/Teams.Notifications.Api/Teams.Notifications.Api.csproj
@@ -18,6 +18,7 @@
 		<PackageReference Include="Microsoft.Agents.Extensions.Teams" Version="*-*" />
 		<PackageReference Include="Microsoft.Agents.Builder.Dialogs" Version="*-*" />
 		<PackageReference Include="Microsoft.Agents.Hosting.AspNetCore" Version="*-*" />
+		<PackageReference Include="Microsoft.ApplicationInsights.WorkerService" Version="*" />
 		<PackageReference Include="Microsoft.SemanticKernel.Agents.AzureAI" Version="*-*" />
 		<PackageReference Include="Microsoft.SemanticKernel.Agents.Core" Version="*" />
 		<PackageReference Include="Microsoft.SemanticKernel.Connectors.AzureOpenAI" Version="*" />
