Adding some small changes, better readme, appsettings, name changes card cleanup (#10)
* going back

* Has to be this way

* bane

* has to change now with v3

* Revert "has to change now with v3"

This reverts commit 616e4dd35897b3ddc445d88bf13e96d8d1af4f4a.

* readme update and add client secret to the local config

* add the program to switch beteween secret and not

* Update Program.cs

* Update Program.cs

* Add manifest and bot info

* Update README.md

* Update README.md

* cleanup and fixes

* cleanup

* Update FileErrorController.cs

* Update FileErrorController.cs

--- a/charts/Teams.Notifications.Api/devops-teams-notification-api/templates/deployment.yaml
+++ b/charts/Teams.Notifications.Api/devops-teams-notification-api/templates/deployment.yaml
@@ -1,19 +1,26 @@
-{{- $name := include "helm-dotnet.name" . -}}
+{{- $name := include "devops-teams-notification-api.name" . -}}
 kind: Deployment
 apiVersion: apps/v1
 metadata:
   name: {{ $name }}
   labels:
     app: {{ $name }}
+    app.kubernetes.io/name: {{ $name }}
+    version: {{ .Chart.AppVersion | quote }}
+    app.kubernetes.io/version: {{ .Chart.AppVersion | quote }}
 spec:
   replicas: {{ .Values.replicaCount }}
   selector:
     matchLabels:
-        app: {{ $name }}
+      app: {{ $name }}
+      app.kubernetes.io/name: {{ $name }}
   template:
     metadata:
       labels:
         app: {{ $name }}
+        app.kubernetes.io/name: {{ $name }}
+        version: {{ .Chart.AppVersion | quote }}
+        app.kubernetes.io/version: {{ .Chart.AppVersion | quote }}
         azure.workload.identity/use: "true"
     spec:
       serviceAccountName: "compute-aks-devops-{{ .Values.environment }}-k8s-sa"
@@ -25,6 +32,20 @@ spec:
             - name: http
               containerPort: 8080
               protocol: TCP
+          livenessProbe:
+            periodSeconds: 20
+            timeoutSeconds: 30
+            httpGet:
+              path: {{ .Values.healthUrl }}
+              scheme: HTTP
+              port: 8080         
+          readinessProbe:
+            periodSeconds: 20
+            timeoutSeconds: 30
+            httpGet:
+              path: {{ .Values.healthUrl }}
+              scheme: HTTP
+              port: 8080
           env:
           - name: ASPNETCORE_URLS
             value: "http://+:8080"
