--- a/src/Teams.Notifications.Api/appsettings.json
+++ b/src/Teams.Notifications.Api/appsettings.json
@@ -3,11 +3,16 @@
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
+    },
+    "ApplicationInsights": {
+      "LogLevel": {
+        "Default": "Information"
+      }
     }
   },
   "AllowedHosts": "*",
   "AgentApplicationOptions": {
-    "StartTypingTimer": true,
+    "StartTypingTimer": false,
     "RemoveRecipientMention": false,
     "NormalizeMentions": false
   }
