--- a/src/Teams.Notifications.Api/appsettings.json
+++ b/src/Teams.Notifications.Api/appsettings.json
@@ -15,5 +15,17 @@
     "StartTypingTimer": false,
     "RemoveRecipientMention": false,
     "NormalizeMentions": false
+  },
+  "ConnectionsMap": [
+    {
+      "ServiceUrl": "*",
+      "Connection": "ServiceConnection"
+    }
+  ],
+  "Connections": {
+    "ServiceConnection": {
+      "Assembly": "Teams.Notifications.Api",
+      "Type": "MsalAuthChanged"
+    }
   }
 }
