add local update

--- a/src/Teams.Notifications.Api/appsettings.local.json
+++ b/src/Teams.Notifications.Api/appsettings.local.json
@@ -7,5 +7,6 @@
   },
   "AZURE_CLIENT_ID": "c911e027-3cbc-4614-9f2e-872c20b8f4b2",
   "AZURE_TENANT_ID": "8421dd92-337e-4405-8cfc-16118ffc5715",
+  "AZURE_AUTHORITY_HOST": "https://login.microsoftonline.com",
   "ClientSecret": "CHANGE_ME"
 }
