--- a/src/Teams.Notifications.Api/Teams.Notifications.Api.csproj
+++ b/src/Teams.Notifications.Api/Teams.Notifications.Api.csproj
@@ -6,8 +6,15 @@
 		<Nullable>enable</Nullable>
 		<NoWarn>$(NoWarn);SKEXP0010;1591</NoWarn>
 		<GenerateDocumentationFile>true</GenerateDocumentationFile>
+		<!-- Tells the compiler to show the files from Teams.Notifications.AdaptiveCardGen This is useful for debugging purposes -->
+		<EmitCompilerGeneratedFiles>true</EmitCompilerGeneratedFiles>
+		<CompilerGeneratedFilesOutputPath>Generated</CompilerGeneratedFilesOutputPath>
 	</PropertyGroup>
-
+	<ItemGroup>
+		<!-- Tells the compiler to ignore the generated files when compiling the project (it will still be part of the compilation) -->
+		<Compile Remove="$(CompilerGeneratedFilesOutputPath)/**/*.cs" />
+		<None Include="$(CompilerGeneratedFilesOutputPath)/**/*.cs" />
+	</ItemGroup>
 	<ItemGroup>
 		<PackageReference Include="AdaptiveCards" Version="*" />
 		<PackageReference Include="Azure.Extensions.AspNetCore.Configuration.Secrets" Version="*" />
@@ -26,8 +33,10 @@
 		<PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="9.*" />
 		<PackageReference Include="Swashbuckle.AspNetCore" Version="*" />
 		<PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="*" />
-
 		<PackageReference Include="Microsoft.Graph.Beta" Version="5.*-*" />
+		<ProjectReference Include="..\Teams.Notifications.AdaptiveCardGen\Teams.Notifications.AdaptiveCardGen.csproj" OutputItemType="Analyzer" />
+		<AdditionalFiles Include="Templates\**\*.json" />
+
 	</ItemGroup>
 
 </Project>
