--- a/src/Teams.Notifications.AdaptiveCardGen/Teams.Notifications.AdaptiveCardGen.csproj
+++ b/src/Teams.Notifications.AdaptiveCardGen/Teams.Notifications.AdaptiveCardGen.csproj
@@ -8,6 +8,9 @@
 		<IsRoslynComponent>true</IsRoslynComponent>
 	</PropertyGroup>
 	<ItemGroup>
+		<EmbeddedResource Include="resources\CardTemplateController.csgen" />
+	</ItemGroup>
+	<ItemGroup>
 		<PackageReference Include="Microsoft.CodeAnalysis.Analyzers" Version="*" PrivateAssets="all" />
 		<PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="*" />
 	</ItemGroup>
