More stuff added!

--- a/src/Teams.Notifications.Api/Teams.Notifications.Api.csproj
+++ b/src/Teams.Notifications.Api/Teams.Notifications.Api.csproj
@@ -10,7 +10,11 @@
 		<EmitCompilerGeneratedFiles>true</EmitCompilerGeneratedFiles>
 		<CompilerGeneratedFilesOutputPath>Generated</CompilerGeneratedFilesOutputPath>
 	</PropertyGroup>
-
+	<ItemGroup>
+		<!-- Tells the compiler to ignore the generated files when compiling the project (it will still be part of the compilation) -->
+		<Compile Remove="$(CompilerGeneratedFilesOutputPath)/**/*.cs" />
+		<None Include="$(CompilerGeneratedFilesOutputPath)/**/*.cs" />
+	</ItemGroup>
 	<ItemGroup>
 		<PackageReference Include="AdaptiveCards" Version="*" />
 		<PackageReference Include="Azure.Extensions.AspNetCore.Configuration.Secrets" Version="*" />
