--- a/src/Teams.Notifications.Api/Teams.Notifications.Api.csproj
+++ b/src/Teams.Notifications.Api/Teams.Notifications.Api.csproj
@@ -10,6 +10,9 @@
 		<EmitCompilerGeneratedFiles>true</EmitCompilerGeneratedFiles>
 		<CompilerGeneratedFilesOutputPath>Generated</CompilerGeneratedFilesOutputPath>
 	</PropertyGroup>
+	<Target Name="RunFormatter" AfterTargets="Build">
+		<Exec Command="dotnet run --project ../Teams.Notifications.Formatter -- format" />
+	</Target>
 	<ItemGroup>
 		<!-- Tells the compiler to ignore the generated files when compiling the project (it will still be part of the compilation) -->
 		<Compile Remove="$(CompilerGeneratedFilesOutputPath)/**/*.cs" />
