--- a/src/Teams.Notifications.Formatter/Teams.Notifications.Formatter.csproj
+++ b/src/Teams.Notifications.Formatter/Teams.Notifications.Formatter.csproj
@@ -15,6 +15,7 @@
 		<PackageReference Include="Microsoft.Extensions.Hosting" Version="9.*" />
 		<PackageReference Include="Microsoft.Extensions.Http" Version="9.*" />
 		<PackageReference Include="Spectre.Console.Cli" Version="0.49.1" />
+		<ProjectReference Include="..\Teams.Notifications.AdaptiveCardGen\Teams.Notifications.AdaptiveCardGen.csproj"/>
 	</ItemGroup>
 
 	<ItemGroup>
