--- a/src/Teams.Notifications.Api/Teams.Notifications.Api.csproj
+++ b/src/Teams.Notifications.Api/Teams.Notifications.Api.csproj
@@ -37,12 +37,13 @@
 		<PackageReference Include="Swashbuckle.AspNetCore" Version="*" />
 		<PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="*" />
 		<PackageReference Include="Microsoft.Graph.Beta" Version="5.*-*" />
-		<ProjectReference Include="..\Teams.Notifications.AdaptiveCardGen\Teams.Notifications.AdaptiveCardGen.csproj" OutputItemType="Analyzer" />
+		<ProjectReference Include="..\Teams.Notifications.AdaptiveCardGen\Teams.Notifications.AdaptiveCardGen.csproj"
+		                  OutputItemType="Analyzer" />
 		<AdditionalFiles Include="Templates\**\*.json" />
 	</ItemGroup>
 
 	<ItemGroup>
-	  <Folder Include="Generated\" />
+		<Folder Include="Generated\" />
 	</ItemGroup>
 
 </Project>
